# spotter-server

./: .gitignore  README.md  Readme.md  pyproject.toml
apps/: settings.py
apps/trip/: constants.py  models.py  serializers.py  urls.py  views.py
apps/trip/migrations/: 0001_initial.py
apps/trip/services/: eld_service.py  geo_service.py
spotter/: asgi.py  urls.py  wsgi.py
spotter/settings/: __init__.py  base.py  configs.py  installed_apps.py  secrets.py
